--- a/formularios.html
+++ b/formularios.html
@@ -12,10 +12,28 @@
     <!-- O method pode ser post ou get, o get não é usado
         para senhas, pois exibe as informações na barra de 
         endereço.
+        O target pode ser usado parar abrir ou não em outra aba.
         O action é para onde o formulário será enviado. -->
     <form name="signup" method="post" action="www.meusite.com.br">
         Nome: <input type="Text" name="name" /><br> Idade: <input type="number" name="age" /><br> Senha: <input type="password" name="password" /><br>
         <button type="submit">Enviar</button>
+    </form>
+    <form method="get">
+        <h3>Você seçecionou pizza de calabresa</h3>
+        <p>Qual opcional voce deseja?</p>
+        <input type="checkbox" name="opcional[]" value="queijo"> + queijo<br>
+        <input type="checkbox" name="opcional[]" value="calabresa"> + calabresa<br>
+        <input type="checkbox" name="opcional[]" value="queijo"> + cebola<br>
+        <input type="checkbox" name="opcional[]" value="queijo"> + azeitona<br>
+        <hr>
+        <p>Borda recheada?</p>
+        <input type="radio" name="borda" value="sim">Sim<br>
+        <input type="radio" name="borda" value="nao">Não<br>
+
+
+
+
+
     </form>
 
 </body>
