--- a/formularios.html
+++ b/formularios.html
@@ -15,25 +15,38 @@
         O target pode ser usado parar abrir ou não em outra aba.
         O action é para onde o formulário será enviado. -->
     <form name="signup" method="post" action="www.meusite.com.br">
-        Nome: <input type="Text" name="name" /><br> Idade: <input type="number" name="age" /><br> Senha: <input type="password" name="password" /><br>
+        Nome: <input type="Text" name="name" /> <br> Idade: <input type="number" name="age" /> <br> Senha: <input type="password" name="password" /><br>
         <button type="submit">Enviar</button>
     </form>
-    <form method="get">
+    <form method="post">
         <h3>Você seçecionou pizza de calabresa</h3>
         <p>Qual opcional voce deseja?</p>
+        <!--A idéia do checkbox é selecionar múltiplos valores
+            no checkbox teremos uma variável com mais de um valor.
+            o [] é usado para que mostremos a linguagem Back-end que se trata
+            de uma lista e não um valor-->
+        <!-- o servidor irá receber da seguinte maneira:
+                $opcional["queijo", "cebola"]-->
         <input type="checkbox" name="opcional[]" value="queijo"> + queijo<br>
         <input type="checkbox" name="opcional[]" value="calabresa"> + calabresa<br>
         <input type="checkbox" name="opcional[]" value="queijo"> + cebola<br>
         <input type="checkbox" name="opcional[]" value="queijo"> + azeitona<br>
-        <hr>
+        <br>
         <p>Borda recheada?</p>
+        <!--Radio button é um ou outro, ou seja, 
+                    ele não tem multiplos valores.
+                    apesar de ter o mesmo nome
+                    seus valores são diferentes, só podendo
+                    escolher um, por vez.-->
         <input type="radio" name="borda" value="sim">Sim<br>
         <input type="radio" name="borda" value="nao">Não<br>
+        <p>Bebida?</p>
+        <input type="radio" name="bebida" value="suco">Suco<br>
+        <input type="radio" name="bebida" value="refrigerante">Refrigerante<br>
+        <input type="radio" name="bebida" value="agua">Água<br>
+        <input type="radio" name="bebida" value="nenhum">Nenhum<br> <br>
 
-
-
-
-
+        <button type="submit">Enviar Pedido</button>
     </form>
 
 </body>
